add github link

--- a/_default.jade
+++ b/_default.jade
@@ -4,6 +4,7 @@ html
     link(rel="stylesheet" href="https://fonts.googleapis.com/css?family=PT+Serif")
     link(rel="stylesheet" href="https://cdn.jsdelivr.net/normalize/3.0.3/normalize.min.css")
     link(rel="stylesheet" href="https://cdn.jsdelivr.net/prism/1.3.0/themes/prism-okaidia.css")
+    link(rel="stylesheet" href="https://cdn.jsdelivr.net/fontawesome/4.5.0/css/font-awesome.min.css")
     link(rel="stylesheet" href="/main.css")
   body
     header
@@ -11,5 +12,7 @@ html
         a(href="/") All Software Sucks
     main
       block main
+    footer: p
+      a(href="https://github.com/jgillich/allsoftwaresucks"): i.fa.fa-github.fa-lg
     script(src="https://cdn.jsdelivr.net/prism/1.3.0/prism.js")
     script(src="https://cdn.jsdelivr.net/prism/1.3.0/components/prism-javascript.min.js")
