--- a/_default.jade
+++ b/_default.jade
@@ -1,6 +1,7 @@
 doctype
 html
   head
+    title= title
     link(rel="stylesheet" href="https://fonts.googleapis.com/css?family=PT+Serif")
     link(rel="stylesheet" href="https://cdn.jsdelivr.net/normalize/3.0.3/normalize.min.css")
     link(rel="stylesheet" href="https://cdn.jsdelivr.net/prism/1.3.0/themes/prism-okaidia.css")
